--- a/package.json
+++ b/package.json
@@ -8,4 +8,8 @@
     "websocket-json-stream": "^0.0.1",
     "ws": "^1.1.0"
   }
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  }
 }
