--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "",
   "dependencies": {
+    "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "sharedb": "^1.0.0-beta",
     "websocket-json-stream": "^0.0.1",
